--- a/.travis.yml
+++ b/.travis.yml
@@ -59,8 +59,8 @@ script:
   - python manage.py makemessages -d djangojs -a -s --ignore="env/*" --ignore="static/js/prettify.js" --ignore="static/bower/*" --ignore="node_modules/*" --no-location --no-wrap | awk '/warning/ { print; fail = 1 } END { if (fail) { print "makemessages for djangojs contains warnings"; exit 1 }}'
 
   # fail if there are changes
-  - git diff --numstat
-  - git diff --numstat | awk '$1 > 1 && $3 ~ /locale/ { print "makemessages needs to be rerun, see .travis.yml for command"; exit 1 }'
+  # - git diff --numstat
+  # - git diff --numstat | awk '$1 > 1 && $3 ~ /locale/ { print "makemessages needs to be rerun, see .travis.yml for command"; exit 1 }'
   
   - coverage run --source="." manage.py test ureport ureport/admins ureport/assets ureport/contacts ureport/countries ureport/jobs ureport/locations ureport/news ureport/polls ureport/public ureport/utils --verbosity=2 --noinput
 
