Update docker configs

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.6
 
-ENV WORKDIR /ureport
-WORKDIR $WORKDIR
+ARG COMPRESS_ENABLED
+
+ENV PYTHONUNBUFFERED 1
+WORKDIR /app
 
 RUN apt update
 RUN apt upgrade -y
@@ -10,27 +12,34 @@ RUN apt install -y \
     gettext \
     supervisor \
     curl \
+    npm \
+    nodejs \
     software-properties-common
 
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
-RUN apt update
-RUN apt install -y nodejs \
-    && rm -rf /var/lib/apt/lists/*
+# RUN adduser -G django django
 
-COPY varnish.default.vcl /etc/varnish/default.vcl
-COPY pip-freeze.txt .
+RUN npm install --global --unsafe-perm \
+  coffeescript \
+  less \
+  yarn
 
-RUN pip install -r pip-freeze.txt
-RUN npm install -g less coffeescript
+COPY ./package.json /app
+RUN npm install
 
-COPY . .
-RUN ln -s $WORKDIR/ureport/settings.py.prod $WORKDIR/ureport/settings.py
+COPY ./pip-freeze.txt /app
+RUN pip install --no-cache-dir -r pip-freeze.txt
+RUN pip install gevent
+
+COPY . /app
+RUN ln -s /app/ureport/settings.py.prod /app/ureport/settings.py
+
+COPY start /start
+RUN sed -i 's/\r$//g' /start
+RUN chmod +x /start
+# RUN chown django /start
+
+# RUN chown -R django /app
+# USER django
 
 EXPOSE 8000
-EXPOSE 8080
-
-RUN chmod +x ./docker-entrypoint.sh
-RUN chmod +x ./app-entrypoint.sh
-
-ENTRYPOINT ["sh", "docker-entrypoint.sh"]
-CMD ["supervisor"]
+ENTRYPOINT ["/start"]
