--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - 8000:8000
       - 8080:8080
     environment:
-      - DEBUG=${DEBUG:-false}
+      - DEBUG=${DEBUG:-true}
       - APP_HOSTNAME=${APP_HOSTNAME:-localhost}
       - EMPTY_SUBDOMAIN_HOST=${EMPTY_SUBDOMAIN_HOST:-http://localhost}
       - SESSION_COOKIE_DOMAIN=${SESSION_COOKIE_DOMAIN:-localhost}
