Added npm install in Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,6 +23,8 @@ COPY pip-freeze.txt .
 RUN pip install -r pip-freeze.txt
 RUN npm install -g less coffeescript
 
+RUN npm install
+
 COPY . .
 RUN ln -s $WORKDIR/ureport/settings.py.prod $WORKDIR/ureport/settings.py
 
