--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss-simple-vars": "^5.0.2",
     "tailwindcss": "^1.1.4",
     "tailwindcss-dir": "^4.0.0",
+    "tslib": "^1.10.0",
     "watch": "^1.0.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
