organize celery queues

--- a/celery/celery-beat.conf
+++ b/celery/celery-beat.conf
@@ -1,9 +1,9 @@
 [supervisord]
 nodaemon = true
 
-[program:celery-ureport]
+[program:celery-beat]
 environment=C_FORCE_ROOT="true"
-command=celery worker -A ureport -Q sync,celery -O fair -l INFO --autoscale=12,1
+command=celery beat -A ureport --loglevel=INFO
 directory=/ureport
 autostart=true
 autorestart=true
@@ -11,3 +11,6 @@ redirect_stderr=True
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stopwaitsecs=120
+
+
+
