--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ jobs:
     name: Test
     strategy:
       matrix:
+        python-version: ['3.6.x', '3.9.x']
         pg-version: ['11', '12']
     runs-on: ubuntu-18.04
     steps:
@@ -27,7 +28,7 @@ jobs:
     - name: Install Python
       uses: actions/setup-python@v1
       with:
-        python-version: '3.6.x'
+        python-version: ${{ matrix.python-version }}
 
     - name: Initialize environment
       run: |
@@ -44,10 +45,12 @@ jobs:
       run: |
         sudo apt-get install gettext
         poetry run ./code_check.py --debug
+
     - name: Run tests
       run: |
         poetry run coverage run manage.py test --verbosity=2 --noinput
         poetry run coverage xml
+
     - name: Upload coverage
       if: success()
       uses: codecov/codecov-action@v1
